--- a/requirements.txt
+++ b/requirements.txt
@@ -1,57 +1,7 @@
-asgiref==3.11.0
-astroid==3.3.8
-blinker==1.9.0
-certifi==2025.10.5
-cffi==2.0.0
-charset-normalizer==3.4.4
-click==8.3.0
-colorama==0.4.6
-coverage==7.11.0
-cryptography==46.0.3
-dill==0.3.9
+# Production requirements for Django portfolio site
+# Core Django framework and essential production packages only
+
 Django==5.2.10
-django-environ==0.12.0
-flake8==7.1.1
-Flask==3.1.2
-idna==3.11
-iniconfig==2.3.0
-isort==6.0.0
-itsdangerous==2.2.0
-Jinja2==3.1.6
-MarkupSafe==3.0.3
-mccabe==0.7.0
-mypy==1.15.0
-mypy-extensions==1.0.0
-narwhals==2.10.1
-numpy==2.3.4
-packaging==25.0
-pandas==2.3.3
-platformdirs==4.3.6
-plotly==6.3.1
-pluggy==1.6.0
-pycodestyle==2.12.1
-pycparser==2.23
-pyflakes==3.2.0
-Pygments==2.19.2
-pylint==3.3.4
-pytest==8.4.2
-pytest-cov==7.0.0
-pytest-flask==1.3.0
-pytest-html==4.1.1
-pytest-metadata==3.1.1
-python-dateutil==2.9.0.post0
-python-dotenv==1.2.1
-python-http-client==3.3.7
-pytoolconfig==1.3.1
-pytz==2025.2
-requests==2.32.5
-rope==1.13.0
-sendgrid==6.12.5
-six==1.17.0
-sqlparse==0.5.5
-tomlkit==0.13.2
-typing_extensions==4.12.2
-tzdata==2025.2
-urllib3==2.5.0
-Werkzeug==3.1.3
+django-environ==0.12.0  
+gunicorn==24.1.1
 whitenoise==6.11.0
