--- a/.env.example
+++ b/.env.example
@@ -1,19 +1,15 @@
-# Django Production Environment Variables
-# Copy this file to .env and fill in your actual values
-# NEVER commit .env to git!
+# Django environment variables
+# Copy to .env and adjust: cp .env.example .env
+# NEVER commit .env to git.
 
-# Core Django Settings
-DEBUG=False
-SECRET_KEY=your-super-secret-key-here-generate-new-one-50-chars-min
+# Required. Use a long random string in production (e.g. 50+ chars).
+DJANGO_SECRET_KEY=your-super-secret-key-change-me-min-50-chars
 
-# Allowed Hosts (comma separated, no spaces)
-ALLOWED_HOSTS=yourdomain.com,www.yourdomain.com,your-server-ip
+# Local development
+DJANGO_DEBUG=True
+DJANGO_ALLOWED_HOSTS=localhost,127.0.0.1
 
-# CSRF Settings
-CSRF_TRUSTED_ORIGINS=https://yourdomain.com,https://www.yourdomain.com
-
-# Database (if using PostgreSQL in production)
-# DATABASE_URL=postgres://user:password@localhost:5432/portfolio_db
-
-# Optional: if you want to use a different static URL in production  
-# STATIC_URL=/static/
+# Production: set DEBUG=False and add your domain(s)
+# DJANGO_DEBUG=False
+# DJANGO_ALLOWED_HOSTS=yourdomain.com,www.yourdomain.com
+# DJANGO_CSRF_TRUSTED_ORIGINS=https://yourdomain.com,https://www.yourdomain.com
