Add writing archive page and View Full Writing Archive link
- New /writing/ page listing all writing with Year, Title, Link
- CTA at end of Writing section linking to writing archive
- Reuse archive layout and styles; project archive link uses url tag

--- a/.gitignore
+++ b/.gitignore
@@ -39,6 +39,7 @@ Thumbs.db
 # Node (if ever added)
 node_modules/
 
-# Personal documents (add your own resume.pdf to static/documents/)
+# Personal documents (add your own resume as static/documents/resume.pdf; set SITE["resume"] in site_data.py)
 static/documents/*.pdf
+!static/documents/resume-example.pdf
 static/documents/resume.pdf
